(-) gmon compile (+) final cond of ex2

--- a/TP2/Makefile
+++ b/TP2/Makefile
@@ -5,7 +5,7 @@
 
 # Variable
 CC 			=	gcc
-CFLAGS		=	-ansi -pedantic -Wall -pg
+CFLAGS		=	-ansi -pedantic -Wall
 
 ifneq (clean, $(firstword $(MAKECMDGOALS)))
     ifneq (all, $(firstword $(MAKECMDGOALS)))
